Update SimaPro talks with kernel

--- a/talks/Friday/SimaPro CSV/bw_simapro_csv overview.ipynb
+++ b/talks/Friday/SimaPro CSV/bw_simapro_csv overview.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cc779eb2-f49f-4d59-b0d7-bd6527e7eaef",
    "metadata": {},
    "outputs": [],
@@ -51,34 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3730da80-be2f-42b9-b074-6bb8633e878d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_filepath = Path(\"/Users/cmutel/Projects/Agribalyse 3.1 import/3.1.1/AGB 3.1.1.csv\")"
+    "# Note - won't work for your accounts\n",
+    "# You can upload a SimaPro export\n",
+    "# or look in https://github.com/brightway-lca/bw_simapro_csv/tree/main/tests/fixtures\n",
+    "my_filepath = Path(\"/home/jupyter-cmutel-brightcon/data/AGB 3.1.1.csv\")  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "44c52c5a-3381-45fe-919b-2a52cb17f12a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-09-26 22:00:41.053\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbw_simapro_csv.main\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m119\u001b[0m - \u001b[1mWriting logs to /Users/cmutel/Library/Logs/bw_simapro_csv/AGB 3.1.1-2024-09-26T22-00-41\u001b[0m\n",
-      "\u001b[32m2024-09-26 22:00:41.087\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbw_simapro_csv.main\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m142\u001b[0m - \u001b[1mUsing database name 'AGRIBALYSE - Unit'\u001b[0m\n",
-      "\u001b[32m2024-09-26 22:00:41.087\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbw_simapro_csv.main\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mSimaPro CSV import started.\n",
-      "\tFile: '/Users/cmutel/Projects/Agribalyse 3.1 import/3.1.1/AGB 3.1.1.csv'\n",
-      "\tDelimiter: ';'\n",
-      "\tName: 'AGRIBALYSE - Unit'\u001b[0m\n",
-      "\u001b[32m2024-09-26 22:01:55.172\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbw_simapro_csv.main\u001b[0m:\u001b[36mresolve_parameters\u001b[0m:\u001b[36m314\u001b[0m - \u001b[1mExtracted and cleaned 17557 process datasets\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sp = bw_simapro_csv.SimaProCSV(my_filepath)"
    ]
@@ -122,39 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9e6d544f-9dd2-42fe-b4a9-d7f1f5dc41ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'simapro_version': '9.5.0.0',\n",
-       " 'kind': <SimaProCSVType.processes: 'processes'>,\n",
-       " 'delimiter': ';',\n",
-       " 'project': 'AGRIBALYSE - Unit',\n",
-       " 'csv_version': '9.0.0',\n",
-       " 'libraries': [],\n",
-       " 'selection': 'Selection (18557)',\n",
-       " 'open_project': None,\n",
-       " 'open_library': 'AGRIBALYSE - Unit',\n",
-       " 'date_separator': '/',\n",
-       " 'dayfirst': True,\n",
-       " 'export_platform_ids': False,\n",
-       " 'skip_empty_fields': False,\n",
-       " 'convert_expressions': True,\n",
-       " 'related_objects': True,\n",
-       " 'include_stages': False,\n",
-       " 'decimal_separator': ',',\n",
-       " 'created': datetime.datetime(2023, 5, 5, 11, 10, 18),\n",
-       " 'exclude_library_processes': None}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sp.header"
    ]
@@ -187,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ad6a4173-648c-4814-9f88-0b373832956d",
    "metadata": {},
    "outputs": [],
@@ -198,36 +158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "32139a5f-4b4c-45e1-9fe3-70d21e4445dc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'metadata': {'Category type': 'material',\n",
-       "  'Process identifier': 'AGRIBALU000000003110191',\n",
-       "  'Type': 'Unit process',\n",
-       "  'Status': 'Finished',\n",
-       "  'Time period': 'Unspecified',\n",
-       "  'Geography': 'Unspecified',\n",
-       "  'Technology': 'Unspecified',\n",
-       "  'Representativeness': 'Unspecified',\n",
-       "  'Multiple output allocation': 'Unspecified',\n",
-       "  'Substitution allocation': 'Unspecified',\n",
-       "  'Cut off rules': 'Unspecified',\n",
-       "  'Capital goods': 'Unspecified',\n",
-       "  'Boundary with nature': 'Unspecified',\n",
-       "  'Date': datetime.date(2020, 4, 15),\n",
-       "  'Comment': 'Inventory of AGRIBALYSE v3.1, 2022 (update to v3.1 in August 2022 by EVEA S.A.S Coopérative). See the complete description of AGRIBALYSE database.',\n",
-       "  'System description': 'AGRIBALYSE'}}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "one_process.parsed"
    ]
@@ -242,23 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "378e5351-475c-4788-9feb-2ab812d1d117",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Products': <bw_simapro_csv.blocks.products.Products at 0x39ff92440>,\n",
-       " 'Materials/fuels': <bw_simapro_csv.blocks.technosphere_edges.TechnosphereEdges at 0x39ff924a0>,\n",
-       " 'Emissions to air': <bw_simapro_csv.blocks.generic_biosphere.GenericUncertainBiosphere at 0x39ff924d0>}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "one_process.blocks"
    ]
@@ -309,96 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "6e2f45bf-6da7-41f0-9d93-c02a2b2ba715",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Mutton, leg, raw, processed in FR | Chilled | PS | at distribution {FR} U',\n",
-       "  'unit': 'kg',\n",
-       "  'waste_type': 'Compost',\n",
-       "  'category': 'Agricultural\\\\Food\\\\Distribution\\\\Meat, egg and fish\\\\Raw meat\\\\Lamb and mutton',\n",
-       "  'comment': '',\n",
-       "  'line_no': 4098335,\n",
-       "  'amount': 1.0,\n",
-       "  'allocation': 100.0}]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "one_process.blocks['Products'].parsed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0b58723c-6d43-4202-b310-700c4ff4afbd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Mutton, leg, raw, processed in FR | Chilled | PS | at packaging {FR} U',\n",
-       "  'unit': 'kg',\n",
-       "  'comment': 'Includes losses at distribution',\n",
-       "  'line_no': 4098342,\n",
-       "  'amount': 1.0,\n",
-       "  'uncertainty type': 0,\n",
-       "  'loc': 1.0},\n",
-       " {'name': 'Electricity, low voltage {FR}| market for | Cut-off, S - Copied from Ecoinvent U',\n",
-       "  'unit': 'MJ',\n",
-       "  'comment': \"Energy consumption at distribution, derived from distribution energy default for: 'Chilled' products and product density of 1.0 kg/l\",\n",
-       "  'line_no': 4098343,\n",
-       "  'amount': 0.003114,\n",
-       "  'uncertainty type': 0,\n",
-       "  'loc': 0.000865,\n",
-       "  'original unit before conversion': 'kWh',\n",
-       "  'unit conversion factor': 3.6},\n",
-       " {'name': 'Electricity, low voltage {FR}| market for | Cut-off, S - Copied from Ecoinvent U',\n",
-       "  'unit': 'MJ',\n",
-       "  'comment': \"Cooling at distribution, derived from distribution energy default for: 'Chilled' products and product density of 1.0 kg/l\",\n",
-       "  'line_no': 4098344,\n",
-       "  'amount': 0.008308800000000002,\n",
-       "  'uncertainty type': 0,\n",
-       "  'loc': 0.002308,\n",
-       "  'original unit before conversion': 'kWh',\n",
-       "  'unit conversion factor': 3.6},\n",
-       " {'name': 'Heat, central or small-scale, natural gas {Europe without Switzerland}| market for heat, central or small-scale, natural gas | Cut-off, S - Copied from Ecoinvent U',\n",
-       "  'unit': 'MJ',\n",
-       "  'comment': \"Heating at distribution, derived from distribution energy default for: 'Chilled' products and product density of 1.0 kg/l\",\n",
-       "  'line_no': 4098345,\n",
-       "  'amount': 0.010385,\n",
-       "  'uncertainty type': 0,\n",
-       "  'loc': 0.010385},\n",
-       " {'name': 'Tap water {Europe without Switzerland}| market for | Cut-off, S - Copied from Ecoinvent U',\n",
-       "  'unit': 'kg',\n",
-       "  'comment': \"Water use at distribution, derived from distribution water use default for: 'Chilled' products and product density of 1.0 kg/l\",\n",
-       "  'line_no': 4098346,\n",
-       "  'amount': 0.000351,\n",
-       "  'uncertainty type': 0,\n",
-       "  'loc': 0.000351},\n",
-       " {'name': 'Transport, freight, lorry with refrigeration machine, 7.5-16 ton, EURO5, R134a refrigerant, cooling {GLO}| transport, freight, lorry with refrigeration machine, 7.5-16 ton, EURO5, R134a refrigerant, cooling | Cut-off, S - Copied from Ecoinvent U',\n",
-       "  'unit': 'tkm',\n",
-       "  'comment': 'Transport to distribution, includes mass of packaging material',\n",
-       "  'line_no': 4098347,\n",
-       "  'amount': 0.47250000000000003,\n",
-       "  'uncertainty type': 0,\n",
-       "  'loc': 472.5,\n",
-       "  'original unit before conversion': 'kgkm',\n",
-       "  'unit conversion factor': 0.001}]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "one_process.blocks['Materials/fuels'].parsed"
    ]
@@ -425,35 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "1e98e97c-f6ee-4b72-b0c4-3a00248cf0da",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'kg',\n",
-       "  'dimension': 'Mass',\n",
-       "  'conversion': 1.0,\n",
-       "  'reference unit name': 'kg',\n",
-       "  'line_no': 6938958},\n",
-       " {'name': 'p',\n",
-       "  'dimension': 'Amount',\n",
-       "  'conversion': 1.0,\n",
-       "  'reference unit name': 'p',\n",
-       "  'line_no': 6938959},\n",
-       " {'name': 'g',\n",
-       "  'dimension': 'Mass',\n",
-       "  'conversion': 0.001,\n",
-       "  'reference unit name': 'kg',\n",
-       "  'line_no': 6938960}]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "units = [block for block in sp.blocks if isinstance(block, bw_simapro_csv.blocks.Units)][0]\n",
     "units.parsed[:3]"
@@ -511,9 +331,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:dlt]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dlt-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -525,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
